[package]
name = "solana-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.3"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
solana-client = "1.16.14"
solana-program = "1.16.13"
solana-sdk = "1.16.13"
thiserror = "1.0.48"
tokio = { version = "1", features = ["full"] }
solana-rpc-client-api = "1.16.14"
solana-account-decoder = "1.16.14"



